syntax = "proto3";

package proto;

option go_package = "api/generated";

enum SecretKind {
    CREDENTIALS = 0;
    CREDIT_CARD = 1;
    MEMO = 2;
    FILE_INFO = 3;
}

message Secret {
    string id = 1;
    SecretKind kind = 2;
    optional bytes data = 3;
    string version = 4;
}

message SubscribeRequest {
    string known_version = 1;
    repeated string known_ids = 2;
}

enum Action {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
}

message Update {
    Action action = 1;
    Secret secret = 2;
}

message MakeUpdateResponse {
    string version = 1;
    optional string new_id = 2;
}

service EncryNestSecretsService {
    rpc SubscribeUpdates(SubscribeRequest) returns (stream Update);
    rpc MakeUpdate(Update) returns (MakeUpdateResponse);
}